--- a/examples/config_example_map copy.yaml
+++ b/examples/config_example_map copy.yaml
@@ -4,33 +4,13 @@ run_name: 'map_wide'
 perf_num: 6
 
 # map paths
-#map_path: './example_map'
-map_path: './f1tenth_racetracks/Montreal/Montreal_map'
-#map_path: './CPSWeekTrack'
-map_ext: '.png'
+map_path: './CPSWeekTrack'
+map_ext: '.pgm'
 
 # starting pose for map
-#example
-sx: 0.7
-sy: 1.
-stheta: 3.7079632679
-#Austin, MexicoCity, Monza, MoscowRaceway, Nuerburgring
-stheta: -1.6
-#BrandsHatch, Catalunya
-#stheta: 3.7079632679
-#Hockenheim
-#stheta: -1.7079632679
-#IMS, Melbourne
-#stheta: -0.7079632679
-#Montreal
-sx: 0.65
-sy: -1.5
-stheta: -1.7079632679
-#cps
-# sx: 0.7
-# sy: -3.0
-# stheta: 3.7079632679
-
+sx: 5.0
+sy: -3.0
+stheta: 2.97079632679
 
 # raceline path and indices
 wpt_path: './example_waypoints.csv'
